# TemplateMetaProgramming

./: CMakeLists.txt  TMP.adoc
include/tmp/: Algorithms.hpp  RegisterAttributes.hpp  RegisterOperations.hpp  Registers.hpp  Typelist.hpp  Utils.hpp
tests/: CMakeLists.txt  algorithms.cpp  main.cpp  registers.cpp  typelist.cpp  utils.cpp
